# pyflaarum

./: README.md  pyproject.toml
src/pyflaarum/: __init__.py  lib.py  objects.py  statements.py
