[project]
name = "pyflaarum"
version = "1.0.0"
authors = [
  { name="Bankole Ojo", email="ojobankole@gmail.com" },
]
description = "A library to interact with flaarum database"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://sae.ng/flaarumtuts/"
Issues = "https://github.com/saenuma/pyflaarum/issues"